[tool.poetry]
name = "rocksdbdict"
version = "0.1.0"
description = ""
authors = ["Adam Marples <adammarples@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-rocksdb = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


