[tool.poetry]
name = "rocksdbdict"
version = "0.7.1"
description = ""
authors = ["Adam Marples <adammarples@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-rocksdb = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


